--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,24 @@ repositories {
 	mavenCentral()
 }
 
+
+//Spring Boot Overriding
+ext['hibernate.version'] = '5.2.11.Final' //추가
+
 dependencies {
+    
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
+	
 }
+
 
 test {
 	useJUnitPlatform()
